wp-content/themes/salefish/assets/scss/layouts/footer.scss
footer {
  padding: 48px 60px 2em;
  background: $gray;
  margin-top: 0; // prevent orphaned gap from preceding section margins
  display: none;

  @include rs600 {
    padding: 40px 20px 1.5em;
  }

  .salefish {
    .salefish_logo {
      width: 150px;

      @include rs550 {
        width: 135px;
      }
    }
  }

  .links.de_links,
  .links.tr_links {
    display: none;
  }

  .links {
    display: flex;
    justify-content: space-between;
    margin-top: 2em;

    @include rs768 {
      justify-content: center;
      flex-wrap: wrap;
      margin-top: 2em;
    }

    .col {
      @include rs768 {
        width: 50%;
        margin-bottom: 20px;
      }

      .title {
        font-family: $PSB;
        font-size: 0.72rem;
        text-transform: uppercase;
        letter-spacing: 0.16em;
        color: $dark_purple;
      }

      ul {
        margin-top: 20px;

        @include rs550 {
          margin-top: 10px;
        }

        li {
          margin: 14px 0;

          @include rs550 {
            margin: 9px 0;
          }

          a,
          span {
            font-size: 0.9em;
            font-family: $PL;
            color: $black;
            text-decoration: none;
            cursor: pointer;
            @include rs550 {
              font-size: 0.82em;
            }
          }
        }
      }

      // img{
      // 	margin-left: 40px;
      // }
      &.flex_img {
        a {
          width: 100%;
        }

        .certified {
          display: none;

          @include rs768 {
            display: block;
            margin-top: 10px;
          }
        }
      }

      &.certified {
        .fish {
          width: 150px;

          @include rs550 {
            width: 80%;
          }
        }
      }

      .plus_group {
        width: 150px;

        @include rs550 {
          width: 135px;
        }
      }

      .certified {
        width: 7vw;

        @include rs550 {
          width: 50px;
        }
      }
    }
  }

  .bottom {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    margin-top: 20px;

    @include rs550 {
      flex-direction: column;
    }

    .left {
      width: 100%;

      @include rs550 {
        order: 2;
      }

      .socials a {
        color: $dark_purple;
        svg { display: block; }
        &:hover {
          color: $light_purple;
          background: rgba($dark_purple, 0.06);
        }
      }

      p {
        color: $black;
        font-size: 0.8em;
        margin-top: 1.5em;

        @include rs550 {
          font-size: 0.75em;
        }

        a {
          color: $black;
          text-decoration: none;
          transition: 300ms ease-in-out;

          &:hover {
            color: $dark_purple;
          }
        }

        span {
          @include rs550 {
            display: block;
          }
        }

        .legal-sep {
          @include rs550 {
            display: none;
          }
        }

        .legal-links {
          @include rs550 {
            display: block;
            margin-top: 4px;
          }
        }

        .heart {
          display: inline-block;
          vertical-align: middle;
          position: relative;
          top: -1px;
          color: $dark_purple;

          svg {
            fill: $dark_purple;
            stroke: $dark_purple;
          }
        }
      }
    }

    .right {
      @include rs550 {
        order: 1;
        display: flex;
        width: 100%;
      }

      .certified {
        width: 100px;

        @include rs768 {
          display: none;
        }
      }
    }
  }
}

.page-template-page-homepage-de {
  footer {
    .links.us_links { display: none; }
    .links.de_links { display: flex; }
  }
}

.page-template-page-homepage-tr,
.page-template-page-tr-contact {
  footer {
    .links.us_links { display: none; }
    .links.tr_links { display: flex; }
  }
}

